🔧 fix(global.css): adjust max-height value to 100vh 🔧 fix(Tags.tsx): adjust gap-x value to 1 🔧 fix(Tags.tsx): adjust text size to text-sm 🔧 fix(Cal.tsx): import global.css file 🔧 fix(Containers.tsx): move Tags component after Cal component

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,7 +6,7 @@
 
 .slide-down {
     transition: max-height 0.3s ease-in-out;
-    max-height: 78vh; /* Adjust the max height as needed */
+    max-height: 100vh; /* Adjust the max height as needed */
     overflow: hidden;
 }
 
